Added homepage slides

--- a/english_2023/index.html
+++ b/english_2023/index.html
@@ -18,17 +18,46 @@
         <div class="container">
             <h1>Explore</h1>
             <div class="slide-container">
-                <div class="slide">
+                <div class="slide-enabled slide">
                     <div class="slide-banner">
-                        <h5>Title of slide one.</h5>
+                        <h5>What is Resonance?</h5>
                     </div>
                     <div class="slide-contents">
                         <p>Content of slide one.</p>
                     </div>
                 </div>
-                <div class="slide"></div>
-                <div class="slide"></div>
-                <div class="slide"></div>
+                <div class="slide-disbaled slide">
+                    <div class="slide-banner">
+                        <h5>Resonance in Music</h5>
+                    </div>
+                    <div class="slide-contents">
+                        <p>Content of slide two.</p>
+                    </div>
+                </div>
+                <div class="slide-enabled slide">
+                    <div class="slide-banner">
+                        <h5>Resonance of Light</h5>
+                    </div>
+                    <div class="slide-contents">
+                        <p>Content of slide three.</p>
+                    </div>
+                </div>
+                <div class="slide-enabled slide">
+                    <div class="slide-banner">
+                        <h5>The Quantum World</h5>
+                    </div>
+                    <div class="slide-contents">
+                        <p>Content of slide four.</p>
+                    </div>
+                </div>
+                <div class="slide-enabled slide">
+                    <div class="slide-banner">
+                        <h5>Searching for LIFE</h5>
+                    </div>
+                    <div class="slide-contents">
+                        <p>Content of slide five.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
