--- a/physics/waves/wave_demo_1.html
+++ b/physics/waves/wave_demo_1.html
@@ -22,7 +22,7 @@
     </ul>
     <noscript>Please enable JavaScript!</noscript>
     <div style="text-align: center;">
-        <canvas id="isplay" style="border:1px solid gray; width:70%; height: 30pxvw"></canvas>
+        <canvas id="display" style="border:1px solid gray; width:70%; height: 30pxvw"></canvas>
     </div>
     <div style="text-align: center;">
         <button>play</button>
