--- a/physics/waves/wave_demo_1.html
+++ b/physics/waves/wave_demo_1.html
@@ -25,11 +25,11 @@
         <canvas id="display" style="border:1px solid gray; width:70%; height: 30pxvw"></canvas>
     </div>
     <div style="text-align: center;">
-        <button>play</button>
-        <button>pause</button>
-        <button>&lt;&lt;step</button>
-        <button>step>></button>
-        <button>reset</button>
+        <button id="start">play</button>
+        <button id="pause">pause</button>
+        <button id="step-back">&lt;&lt;step</button>
+        <button id="step-forward">step>></button>
+        <button id="reset">reset</button>
     </div>
     <br>
     <small>Based on an applet by webphysics.davidson.edu</small>
