--- a/physics/waves/wave_demo_1.html
+++ b/physics/waves/wave_demo_1.html
@@ -11,6 +11,10 @@
         button:active{
             background-color: skyblue;
         }
+        canvas {
+            border:1px solid gray; 
+            width:70%; 
+        }
     </style>
 </head>
 <body>
@@ -22,7 +26,7 @@
     </ul>
     <noscript>Please enable JavaScript!</noscript>
     <div style="text-align: center;">
-        <canvas id="display" style="border:1px solid gray; width:70%; height: 30pxvw"></canvas>
+        <canvas id="display"></canvas>
     </div>
     <div style="text-align: center;">
         <button id="start">play</button>
