added home screen

--- a/physics/waves/wave_demo_1.html
+++ b/physics/waves/wave_demo_1.html
@@ -15,9 +15,19 @@
             border:1px solid gray; 
             width:70%; 
         }
+        #home {
+            float:left;
+            background-image: url("home_still.png");
+            width: 60px;
+            height: 45px;
+        }
+        #home:hover {
+            background-image: url("home_moving.gif");
+        }
     </style>
 </head>
 <body>
+    <a id="home" href="index.html"></a>
     <h1 style="text-align: center;">Transverse and Longitudinal Waves</h1>
     <p>Another way to classify waves is to compare what the particles in the medium are doing to the direction the wave is traveling.</p>
     <ul>
