Fixed second demo

--- a/physics/waves/index.html
+++ b/physics/waves/index.html
@@ -17,6 +17,13 @@
             padding: 10px;
             background-image: url("stars.gif");
         }
+        footer {
+            position: fixed;
+            bottom: 0px;
+        }
+        nav {
+            font-size: 18pt;
+        }
     </style>
 </head>
 <body>
@@ -35,5 +42,12 @@
             <li><a href="wave_demo_2.html">Wavelength and Amplitude</a></li>
         </ol>
     </nav>
+
+    <footer>
+        <small>
+            Based on applets by webphysics.davidson.edu <br>
+            Coded by Adam Klassen, 2023
+        </small>
+    </footer>
 </body>
 </html>
