--- a/physics/waves/wave_demo_1.html
+++ b/physics/waves/wave_demo_1.html
@@ -24,6 +24,10 @@
         #home:hover {
             background-image: url("home_moving.gif");
         }
+        footer {
+            position: fixed;
+            bottom: 0px;
+        }
     </style>
 </head>
 <body>
@@ -46,7 +50,9 @@
         <button id="reset">reset</button>
     </div>
     <br>
-    <small>Based on an applet by webphysics.davidson.edu</small>
+    <footer>
+        <small>Based on an applet by webphysics.davidson.edu</small>
+    </footer>
     <script src="wave_demo_1.js"></script>
 </body>
 </html>
