--- a/diffEQ/isoclines/index.html
+++ b/diffEQ/isoclines/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isoclines</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<style>
+		body {
+			font-family: Comic Sans MS;
+			padding: 20px;
+		}
+		div {
+			padding: 10px;
+		}
+		canvas {
+			border: 2px solid black;
+		}
+	</style>
     <div>
         <form onsubmit="draw()">
             <fieldset>
